--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
                     </div><!-- end col -->
                 </div><!-- end row -->
             </div><!-- end container -->
-            
+            <p align="center"> Tu como practicarias la eduacion para la paz?</p>
             <div class = "fb-comments" data-href = "http://192.168.0.7/blog/tech-index.html" data-width = "100%" data-numposts = "1" >       
             
         </section>
